<resources>
    <string name="app_name">ProjetMobile</string>
    <string name="hello">Hello !</string>
    <string name="usename">Usename :</string>
    <string name="phone">Phone :</string>
    <string name="email">Email :</string>
    <string name="register">Register</string>
    <string name="Password">********</string>
    <string name="ConfirmPassword">********</string>
    <string name="registerbtn">Register</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="singup">SingUp</string>
    <string name="button">Button</string>
    <string name="sujet">Sujet :</string>
    <string name="titre">Titre :</string>
    <string name="formulaire">Formulaire</string>
</resources>